removed delete local video button during viewing

--- a/SubBox/wwwroot/localbrowser.html
+++ b/SubBox/wwwroot/localbrowser.html
@@ -27,7 +27,7 @@
             <div class="navigationBox">
                 <p>{{selectedSize}} MiB</p>
                 <div>
-                    <button @click="deleteVideo()" class="deleteButton">Delete from Harddrive</button>
+                    <!--<button @click="deleteVideo()" class="deleteButton">Delete from Harddrive</button>-->
                     <button @click="back()">Back to SubBox Nightly</button>
                 </div>
             </div>
