added settings entry for profile picture sync

--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -557,6 +557,16 @@
                         </label>
                     </div>
                 </div>
+                <div class="singleSetting">
+                    <div style="justify-content: flex-start;">
+                        <p>Sync Channel Pictures</p>
+                    </div>
+                    <div style="justify-content: flex-end;">
+                        <div class="settingsButton">
+                            Sync
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
