--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -301,7 +301,7 @@
         <div id="profileUI" v-show="profileMode" class="profileOverlay" v-bind:style="{ 'background-image': 'url(' + settings.PicOfTheDayUrl + ')' }">
             <div class="profileBlur">
                 <div class="profileHeader">
-                    <input v-model="settings.Username"></input>
+                    <input v-model="settings.Username" onfocus="this.setSelectionRange(0,this.value.length);"></input>
                 </div>
                 <div class="profileOption">
                     <p>Since {{settings.FirstUse}}</p>
