--- a/SubBox/wwwroot/index.html
+++ b/SubBox/wwwroot/index.html
@@ -301,13 +301,13 @@
         <div id="profileUI" v-show="profileMode" class="profileOverlay" v-bind:style="{ 'background-image': 'url(' + settings.PicOfTheDayUrl + ')' }">
             <div class="profileBlur">
                 <div class="profileHeader">
-                    <input v-model="settings.Username" onfocus="this.setSelectionRange(0,this.value.length);"></input>
+                    <input v-model="settings.Username" onfocus="this.setSelectionRange(0,this.value.length);" @focusout="saveSettings();"></input>
                 </div>
                 <div class="profileOption">
                     <p>Since {{settings.FirstUse}}</p>
                 </div>
                 <div class="profileNotes">
-                    <textarea v-model="settings.Notes"></textarea>
+                    <textarea v-model="settings.Notes" @focusout="saveSettings();"></textarea>
                 </div>
                 <div class="profileSpacer"></div>
                 <div @click="refresh()" class="profileOption" style="cursor: pointer;">
